# RL_sailing_challenge

./: .gitignore  agent_high_lr.npz  agent_ppo_bis_weights.npz  agent_ppo_weights.npz  awac_sailing.pth  bc_10_epoch.npz  bc_10_epoch_finetuned_metrics.json  bc_10_epoch_metrics.json  bc_1_epoch_metrics.json  bc_50_epochs_metrics.json  best_pattern_found.json  decoded_scenario.json  decoder_cache.json  high_lr_ent_from_3_metrics.json  high_lr_ent_from_scratch_metrics.json  history.npz  mlp_model.npz  mlp_model.pth  ppo_bc.npz  ppo_bc_finetuned_metrics.json  ppo_bc_metrics.json  ppo_from_scratch.npz  ppo_from_scratch_metrics.json  ppo_test_metrics.json  prediction_supernaive.json  pyproject.toml  results_agents.json  results_mcts.json  start_on_3_metrics.json  submission_agent.py  training_history.npz  wind_hacker_state.json
notebooks/: challenge_walkthrough.ipynb  design_agent.ipynb  evaluate_agent.ipynb  ppo_bc.npz  ppo_from_scratch.npz  validate_agent.ipynb  vis_hist.ipynb  visualize_agent copy.ipynb  visualize_agent.ipynb
src/: env_sailing.py
src/agents/: agent_dqn.py  agent_massive_training.py  agent_massive_training_bis.py  agent_massive_training_from_3.py  agent_massive_training_log.py  agent_ppo.py  agent_ppo_bc.py  agent_ppo_bc_v2.py  agent_ppo_bis.py  agent_super_naive.py  agent_trained_example.py  baseline.py  deep_net_agent.py  mcts_agent.py  ppo_bc_submission.py  scenario_aware.py  test.py  wind_hacker.py  windmaster.py
src/argo/: argo-training-from-3-log.yaml  argo-training-from-3.yaml  argo-training.yaml
src/utils/: argo-training copy.yaml  (+9 more)
(+1 files in other folders)
